--- a/.gitignore
+++ b/.gitignore
@@ -29,17 +29,13 @@
 # OS generated files #
 ######################
 ~*.*
-.DS_Store
-.DS_Store?
-.swp
-.swo
-._*
-.Spotlight-V100
-.Trashes
+*.DS_Store
+*.DS_Store?
+*.swp
+*.swo
+*._*
+*.Spotlight-V100
+*.Trashes
 Icon?
 ehthumbs.db
 Thumbs.db
-
-test/.DS_Store
-
-test/abc-tunes/.DS_Store
